--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- InstanceEndEditable -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script src="contact/js/validate.js"></script>
+<script src="js/validate.js"></script>
 <style>
     .error-info{
         color: red;
