--- a/top.html
+++ b/top.html
@@ -56,7 +56,7 @@
             </div>
             <div>
                 <label>電話番号<span>必須</span></label>
-                <input type="text" name="tel" placeholder="例）0000000000" value="" pattern="[0-9-]+" title="正しい電話番号を入力してください" class="v-tel">
+                <input type="text" name="tel" placeholder="例）0000000000" value="" class="v-tel">
             </div>
             <div>
                 <label>性別<span>必須</span></label>
@@ -103,7 +103,7 @@
             </div>
             <div>
                 <label>その他<span>必須</span></label>
-                <textarea name="other" rows="5" placeholder="その他内容を入力" class="v-body"></textarea>
+                <textarea name="other" rows="5" placeholder="その他内容を入力" class="v-textarea"></textarea>
             </div>
             <div>
                 <label>画像認証<span>必須</span></label>
@@ -118,7 +118,7 @@
 
             <div>
                 <label>ファイル<span>必須</span></label>
-                <input type="file" name="attachment">
+                <input type="file" name="attachment" class="v-file">
             </div>
         </div>
         <button type="submit" class="submit">確認画面へ</button>
