--- a/thanks.html
+++ b/thanks.html
@@ -16,7 +16,7 @@
         内容を確認のうえ、回答させて頂きます。<br>
         しばらくお待ちください。
         </p>
-        <a href="/">
+        <a href="../">
             <button type="button">お問い合わせに戻る</button>
         </a>
     </div>
