--- a/confirm.html
+++ b/confirm.html
@@ -1,27 +1,371 @@
-<html lang="ja">
+<!DOCTYPE html>
+<html lang="ja"><!-- InstanceBegin template="/Templates/temp.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148815437-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-148815437-1');
+</script>
+
 <meta charset="UTF-8">
-<title>お問い合わせフォーム</title>
-<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>仮入所申込み｜山陽自動車教習所</title>
+
+<meta name="description" content="仮入所申込みの紹介です。">
+<meta name="keywords" content="">
+<link rel="shortcut icon" href="../shared/img/common/icon/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="../shared/img/common/icon/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="57x57" href="../shared/img/common/icon/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../shared/img/common/icon/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="../shared/img/common/icon/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../shared/img/common/icon/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="../shared/img/common/icon/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="../shared/img/common/icon/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="../shared/img/common/icon/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../shared/img/common/icon/apple-touch-icon-180x180.png">
+
+<link rel="alternate" type="application/rss+xml" title="sitemap" href="/sitemap.xml">
+<meta property="og:title" content="山陽自動車教習所">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.sanyo-ds.co.jp">
+<meta property="og:image" content="https://www.sanyo-ds.co.jp../shared/img/common/img_ogp.jpg">
+<meta property="og:site_name" content="http://www.sanyo-ds.co.jp">
+<meta property="og:description" content="山陽自動車教習所のHPです。姫路駅から徒歩で通える自動車教習所！">
+
+<!-- InstanceEndEditable -->
+<link rel="stylesheet" href="../shared/css/dest/style.css">
+<!-- ▼▼▼▼ font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+
+<!-- ▼▼▼▼ 自動翻訳させないための記述 -->
+<meta http-equiv="Content-Language" content="ja">
+<meta name="google" content="notranslate">
+<!-- ▲▲▲▲　ここまで -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- InstanceBeginEditable name="head" -->
+<link href="../shared/css/contact.css" rel="stylesheet" type="text/css">
+<!-- InstanceEndEditable -->
 </head>
 <body>
-<div><h1>Company Name</h1></div>
-<div><h2>お問い合わせ</h2></div>
-<div>
-    <form action="send.php" method="post">
-            
-            <h1 class="contact-title">お問い合わせ 内容確認</h1>
-            <p>お問い合わせ内容はこちらで宜しいでしょうか？<br>よろしければ「送信する」ボタンを押して下さい。</p>
-            <div id="confirms"> <!-- id="confirms"が必要 -->
-                <div>
-                    <label>お名前</label>
-                    <p>お名前</p>
-                </div>
-                
-            </div>
-        <input type="button" value="内容を修正する" onclick="history.back(-1)">
-        <button type="submit" name="submit">送信する</button>
-    </form>
+
+<!-- InstanceBeginEditable name="body" -->
+
+<!-- InstanceEndEditable -->
+<div class="container" id="container">
+
+<header class="header pc paramHeaderPc">
+<div class="header__top">
+<div class="header__top__box">
+<p class="header__top__box__copy">SANYOは、姫路駅から徒歩で通える自動車教習所。</p>
+<ul class="header__top__box__navi">
+<li class="header__top__box__navi__list"><a href="../recruit/" class="header__top__box__navi__list__btn">採用情報</a></li>
+<li class="header__top__box__navi__list"><a href="../contact/" class="header__top__box__navi__list__btn">お問い合わせ</a></li>
+
+<li class="header__top__box__navi__list"><a href="https://sanyo-ds.co.jp/sys/calendars/view" class="header__top__box__navi__list__btn2">在校生メニュー</a></li>
+</ul>
 </div>
+</div>
+
+<div class="header__center">
+<nav class="header__center__navi pc-navi">
+<div class="pc-navi__top">
+<h1 class="pc-navi__logo"><a href="../index.html" class="pc-navi__logo__btn"><img src="../shared/img/common/img_logo.png" alt="山陽自動車教習所"></a></h1>
+<div class="pc-navi__info">
+<div class="pc-navi__info__box">
+<p class="pc-navi__info__tel"><img src="../shared/img/common/icon_free_dial.png" alt="フリーダイヤル"> 0120-23-2087</p>
+</div>
+<p class="pc-navi__info__time">電話受付 【月～金】8:40～20:40 ※【土・日】は17:30までとなっております。</p>
+</div>
+</div>
+
+<div class="pc-navi__block">
+<ul class="pc-navi__box">
+<li class="pc-navi__box__list"><a href="../admission/" class="pc-navi__box__list__btn">入所案内</a></li>
+<li class="pc-navi__box__list"><a href="../strength/" class="pc-navi__box__list__btn">選ばれる理由</a></li>
+<li class="pc-navi__box__list"><a href="../vehicle_type/" class="pc-navi__box__list__btn">料金案内</a></li>
+<li class="pc-navi__box__list"><a href="../course/" class="pc-navi__box__list__btn">教習コース</a></li>
+<li class="pc-navi__box__list"><a href="../access/" class="pc-navi__box__list__btn">アクセス</a></li>
+<li class="pc-navi__box__list"><a href="../faculty_introduction/" class="pc-navi__box__list__btn">教員紹介</a></li>
+<li class="pc-navi__box__list"><a href="/sys/whatsnews/lists" class="pc-navi__box__list__btn">お知らせ</a></li>
+</ul>
+
+<div class="pc-navi__contact">
+<p class="pc-navi__contact__box"><a href="../#/" class="pc-navi__contact__box__btn pc-navi__contact__box__btn--doc">仮入所申込み</a></p>
+
+<p class="pc-navi__contact__box"><a href="../document_request/" class="pc-navi__contact__box__btn pc-navi__contact__box__btn--doc">資料請求</a></p>
+</div>
+</div>
+</nav>
+</div>
+</header>
+
+<header class="header sp paramHeaderSp">
+<h1 class="header__logo"><a href="../index.html" class="header__logo__btn"><img src="../shared/img/common/img_logo_i.png" alt="山陽自動車教習所"></a></h1>
+
+
+<div class="zaiko_meinu">
+<a href="https://sanyo-ds.co.jp/sys/calendars/view">在校生の方</a>
+</div>
+
+<div class="header__hamburger hamburger">
+<div class="hamburger__icon trigSpNavi paramSpNavi" data-open="false">
+<span></span>
+<span></span>
+<span></span>
+</div>
+</div>
+</header>
+
+<nav class="tracking-navi paramTrackingNavi bulletTrackingNavi pc" data-active="false">
+<div class="tracking-navi__block">
+<p class="tracking-navi__logo"><a href="../index.html" class=""><img src="../shared/img/common/img_logo_small.png" alt="山陽自動車教習所"></a></p>
+<ul class="tracking-navi__box">
+<li class="tracking-navi__box__list"><a href="../admission/" class="tracking-navi__box__list__btn">入所案内</a></li>
+<li class="tracking-navi__box__list"><a href="../strength/" class="tracking-navi__box__list__btn">選ばれる理由</a></li>
+<li class="tracking-navi__box__list"><a href="../vehicle_type/" class="tracking-navi__box__list__btn">料金案内</a></li>
+<li class="tracking-navi__box__list"><a href="../course/" class="tracking-navi__box__list__btn">教習コース</a></li>
+<li class="tracking-navi__box__list"><a href="../access/" class="tracking-navi__box__list__btn">アクセス</a></li>
+<li class="tracking-navi__box__list"><a href="../faculty_introduction/" class="tracking-navi__box__list__btn">教員紹介</a></li>
+<li class="tracking-navi__box__list"><a href="/sys/whatsnews/lists" class="tracking-navi__box__list__btn">お知らせ</a></li>
+</ul>
+<div class="tracking-navi__contact">
+<p class="tracking-navi__contact__box"><a href="../#/" class="tracking-navi__contact__box__btn tracking-navi__contact__box__btn--doc">仮入所申込み</a></p>
+<p class="tracking-navi__contact__box"><a href="../document_request/" class="tracking-navi__contact__box__btn tracking-navi__contact__box__btn--doc">資料請求</a></p>
+</div>
+</div>
+</nav>
+
+<div class="sp-navi bulletSpNavi sp">
+<div class="sp-navi__block">
+<ul class="sp-navi__box">
+<li class="sp-navi__box__list"><a href="../admission/" class="sp-navi__box__list__btn">入所案内</a></li>
+<li class="sp-navi__box__list"><a href="../strength/" class="sp-navi__box__list__btn">選ばれる理由</a></li>
+<li class="sp-navi__box__list"><a href="../vehicle_type/" class="sp-navi__box__list__btn">料金案内</a></li>
+<li class="sp-navi__box__list"><a href="../course/" class="sp-navi__box__list__btn">教習コース</a></li>
+<li class="sp-navi__box__list"><a href="../access/" class="sp-navi__box__list__btn">アクセス</a></li>
+<li class="sp-navi__box__list"><a href="../faculty_introduction/" class="sp-navi__box__list__btn">教員紹介</a></li>
+<li class="sp-navi__box__list"><a href="/sys/whatsnews/lists" class="sp-navi__box__list__btn">お知らせ</a></li>
+<li class="sp-navi__box__list"><a href="https://sanyo-ds.co.jp/sys/calendars/view" class="sp-navi__box__list__btn">在校生メニュー</a></li>
+<li class="sp-navi__box__list"><a href="../recruit/" class="sp-navi__box__list__btn">採用情報</a></li>
+</ul>
+
+<div class="sp-navi__info">
+<ul class="sp-navi__info__box">
+<li class="sp-navi__info__box__list"><a href="../contact/" class="sp-navi__info__box__list__btn">お問い合わせ</a></li>
+<li class="sp-navi__info__box__list"><a href="../document_request/" class="sp-navi__info__box__list__btn">資料請求</a></li>
+<li class="sp-navi__info__box__list"><a href="../about/" class="sp-navi__info__box__list__btn">SANYOについて</a></li>
+</ul>
+</div>
+</div>
+</div>
+
+
+
+
+
+<!-- InstanceBeginEditable name="hed_img" -->
+
+<!-- InstanceEndEditable -->
+
+<!-- InstanceBeginEditable name="main" -->
+<main class="main">
+<section class="breadcrumb">
+<ul class="breadcrumb__box">
+<li class="breadcrumb__box__list"><a href="/index.html" class="breadcrumb__box__list__btn">山陽自動車教習所</a></li>
+<li class="breadcrumb__box__list"><span class="breadcrumb__box__list__txt">仮入所申込み</span></li>
+</ul>
+</section>
+
+<section class="about" id="concept">
+<h2 class="about__title">仮入所申込み</h2>
+<section class="about-top">
+</section>
+
+
+
+<section id="contact">
+<div class="section_wrap">
+
+
+
+
+<h3 class="pv_tit">
+確認画面
+</h3>
+
+
+<p class="contact_txt">
+お問い合わせ内容はこちらで宜しいでしょうか？<br>
+よろしければ「送信」ボタンを押して下さい。 
+</p>
+
+
+<form action="send.php" method="post">
+<table id="confirms" class="com_table mB30"> <!-- id="confirms"が必要 -->
+</table>
+
+<div align="center">
+<p class="mB30" style="margin-bottom:30px"><button type="submit" name="submit" class="btn btn-primary">送信</button></p>
+<p>
+<input type="button" value="戻る" onclick="location.href='index.php'" class="btn_back">
+</p>
+</div>
+</form>
+
+
+</div>
+</section>
+
+
+
+</section>
+</main>
+
+
+<!-- InstanceEndEditable --> 
+<footer class="footer pc">
+<div class="footer__block">
+<div class="footer__boxes">
+<div class="footer__box">
+<p class="footer__box__title"><a href="../index.html" class="footer__box__title__btn">ホーム</a></p>
+</div>
+
+<div class="footer__box footer__box--multi">
+<p class="footer__box__title footer__box__title--multi"><a href="../strength/" class="footer__box__title__btn">SANYOが選ばれる理由</a></p>
+<ul class="footer__box__lists">
+<li class="footer__box__list"><a href="../strength/facility/" class="footer__box__list__btn">施設・設備紹介</a></li>
+</ul>
+</div>
+
+<div class="footer__box">
+<p class="footer__box__title"><a href="/sys/events/lists" class="footer__box__title__btn">イベント＆キャンペーン</a></p>
+</div>
+
+<div class="footer__box">
+<p class="footer__box__title footer__box__title--multi"><a href="/sys/whatsnews/lists" class="footer__box__title__btn">NEWS</a></p>
+<ul class="footer__box__lists">
+<li class="footer__box__list"><a href="/sys/whatsnews/lists/1" class="footer__box__list__btn">お知らせ</a></li>
+</ul>
+</div>
+</div>
+
+<div class="footer__boxes">
+<div class="footer__box footer__box--multi">
+<p class="footer__box__title footer__box__title--multi"><a href="../course/" class="footer__box__title__btn">教習コース ラインナップ</a></p>
+<ul class="footer__box__lists">
+<li class="footer__box__list"><a href="../course/#general" class="footer__box__list__btn">一般コース</a></li>
+<li class="footer__box__list"><a href="../course/#preemption" class="footer__box__list__btn">予約先取りコース</a></li>
+<li class="footer__box__list"><a href="../course/#relief" class="footer__box__list__btn">安心コース</a></li>
+</ul>
+</div>
+
+<div class="footer__box footer__box--multi">
+<p class="footer__box__title footer__box__title--multi"><a href="../vehicle_type/" class="footer__box__title__btn">取得できる免許 取扱車種のご紹介</a></p>
+<ul class="footer__box__lists">
+<li class="footer__box__list"><a href="../vehicle_type/normal/" class="footer__box__list__btn">普通AT・MT</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/semi_medium/" class="footer__box__list__btn">準中型</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/medium/" class="footer__box__list__btn">中型自動車</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/large/" class="footer__box__list__btn">大型自動車</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/normal_motorcycle/" class="footer__box__list__btn">普通二輪AT・MT</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/large_motorcycle/" class="footer__box__list__btn">大型二輪</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/towing/" class="footer__box__list__btn">けん引自動車</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/normal_twotypes/" class="footer__box__list__btn">普通二種AT・MT</a></li>
+<li class="footer__box__list"><a href="../vehicle_type/#seminar" class="footer__box__list__btn">各種講習のご案内</a></li>
+</ul>
+</div>
+</div>
+
+<div class="footer__boxes">
+<div class="footer__box footer__box--multi">
+<p class="footer__box__title footer__box__title--multi"><a href="../admission/" class="footer__box__title__btn">入所案内</a></p>
+<ul class="footer__box__lists">
+</ul>
+</div>
+
+<div class="footer__box footer__box--multi">
+<p class="footer__box__title footer__box__title--multi"><a href="../access/" class="footer__box__title__btn">アクセス</a></p>
+<ul class="footer__box__lists">
+<li class="footer__box__list"><a href="../access/#bus" class="footer__box__list__btn">スクールバス運行について</a></li>
+</ul>
+</div>
+
+<div class="footer__box footer__box--multi">
+<p class="footer__box__title footer__box__title--multi"><a href="/sys/calendars/view" class="footer__box__title__btn">在校生の方へ</a></p>
+<ul class="footer__box__lists">
+<li class="footer__box__list"><a href="/sys/calendars/view/#schedule" class="footer__box__list__btn">教習カレンダー</a></li>
+<li class="footer__box__list"><a href="/sys/calendars/view/#exam_date" class="footer__box__list__btn">検定のご案内</a></li>
+<li class="footer__box__list"><a href="/sys/calendars/view/#exam_date" class="footer__box__list__btn">検定について</a></li>
+</ul>
+</div>
+
+<div class="footer__box footer__box--multi">
+<p class="footer__box__title footer__box__title--multi"><a href="../about/" class="footer__box__title__btn">SANYOについて</a></p>
+</div>
+</div>
+
+<div class="footer__box footer__box">
+<p class="footer__box__title"><a href="../recruit/" class="footer__box__title__btn">採用情報</a></p>
+<p class="footer__box__title"><a href="../contact/" class="footer__box__title__btn">お問い合わせ</a></p>
+<p class="footer__box__title"><a href="../document_request/" class="footer__box__title__btn">資料請求</a></p>
+<p class="footer__box__title"><a href="../privacy_policy/" class="footer__box__title__btn">プライバシーポリシー</a></p>
+</div>
+</div>
+</footer>
+
+<div class="copyright">
+All Right Reserved By 山陽自動車教習所
+</div>
+
+<div class="tracking-btn paramTrackingBtn sp">
+<p class="tracking-btn__box"><a href="../contact/" class="tracking-btn__box__btn tracking-btn__box__btn--doc">問合せ</a></p>
+<p class="tracking-btn__box"><a href="#" class="tracking-btn__box__btn tracking-btn__box__btn--doc">仮入所申込み</a></p>
+<p class="tracking-btn__box"><a href="../document_request/" class="tracking-btn__box__btn tracking-btn__box__btn--doc">資料請求</a></p>
+</div>
+
+
+
+
+<script type="text/javascript" src="../shared/js/dest/scripts.js?ver=191106"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3kAVO709CaW1eK4C16mX7cTEbjAT4dXM" async defer></script>
+
+
+
+<!--<div class="btn_chatbot">
+<a href="#"><span><img src="../shared/img/common/chat_icon.svg"></span>チャットボットに問い合わせ</a>
+</div>-->
+
+
+<!--<div class="bl_floatingBanner">
+<a href="#" class="bl_floatingBanner_img"><img src="../shared/img/common/btn_voice_img.jpg" alt="卒業生の満足度"></a>
+<div class="bl_floatingBanner_close" id="js_floatingBanner_close">
+<span></span>
+<span></span>
+</div>
+</div>-->
+
+</div>
+<!-- InstanceBeginEditable name="bot" -->
+
+<!-- InstanceEndEditable -->
+
+<script>
+'use strict';
+// ×をクリックするとフローティングバナー（追従バナー）が閉じる
+window.onload = function () {
+  document.getElementById("js_floatingBanner_close").onclick = function () {
+    this.parentNode.classList.add('js_close');
+  };
+}
+</script>
+
+
+<script type='text/javascript' src='https://ws1.sinclo.jp/client/651bbd70ebe50.js'></script>
 </body>
-</html>
+<!-- InstanceEnd --></html>
