--- a/thanks.html
+++ b/thanks.html
@@ -20,9 +20,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>お問い合わせ｜株式会社サンライズグランドフーズ｜総合フードマーケティング</title>
+<title>お問い合わせ｜神姫bizプロデュース株式会社｜総合フードマーケティング</title>
 <meta name="keywords" content="お問い合わせ,チルドフード,本物,健康,安全,流通,企画提案,付加価値,ストアマネージャ,PB商品,チルド食品,食品卸,卸売り,棚割管理,静岡県,サンライズ,Sunrise Grand Foods,サンライズグランドフーズ"/>
-<meta name="description" content="株式会社サンライズグランドフーズのお問い合わせページ"/>
+<meta name="description" content="神姫bizプロデュース株式会社のお問い合わせページ"/>
 <!-- InstanceEndEditable -->
 
 
@@ -67,7 +67,7 @@
 <div id="header">
 
 <div class="logo_wrap">	
-<a href="../index.html"><img src="../images/com/logo.png" alt="株式会社サンライズグランドフーズ"></a>
+<a href="../index.html"><img src="../images/com/logo.png" alt="神姫bizプロデュース株式会社"></a>
 </div>
 
 <div class="menu_wrap">
@@ -172,7 +172,7 @@ TOPに戻る
 
 <div class="f_logo_wrap">
 <div class="f_logo">
-<img src="../images/com/logo_w.png" alt="株式会社サンライズグランドフーズ">
+<img src="../images/com/logo_w.png" alt="神姫bizプロデュース株式会社">
 </div> 
 
 <h2 class="en"><span>株式会社</span>サンライズグランドフーズ</h2>
