--- a/top.html
+++ b/top.html
@@ -20,9 +20,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>お問い合わせ｜株式会社サンライズグランドフーズ｜総合フードマーケティング</title>
+<title>お問い合わせ｜神姫bizプロデュース株式会社｜総合フードマーケティング</title>
 <meta name="keywords" content="お問い合わせ,チルドフード,本物,健康,安全,流通,企画提案,付加価値,ストアマネージャ,PB商品,チルド食品,食品卸,卸売り,棚割管理,静岡県,サンライズ,Sunrise Grand Foods,サンライズグランドフーズ"/>
-<meta name="description" content="株式会社サンライズグランドフーズのお問い合わせページ"/>
+<meta name="description" content="神姫bizプロデュース株式会社のお問い合わせページ"/>
 <!-- InstanceEndEditable -->
 
 
@@ -66,7 +66,7 @@
 <div id="header">
 
 <div class="logo_wrap">	
-<a href="../index.html"><img src="../images/com/logo.png" alt="株式会社サンライズグランドフーズ"></a>
+<a href="../index.html"><img src="../images/com/logo.png" alt="神姫bizプロデュース株式会社"></a>
 </div>
 
 <div class="menu_wrap">
@@ -216,7 +216,7 @@ class="v-name"の様に設定する。
 <h3 class="contact-privacy__title">プライバシーポリシー</h3>
 <dl class="contact-privacy__list">
 <dt>ご利用規定</dt>
-<dd>株式会社サンライズグランドフーズウェブサイト（以下「本サイト」）のコンテンツは、次に定める条件（以下「ご利用規定」）に従ってご利用いただくことを条件として、株式会社サンライズグランドフーズ（以下、「当社」）が提供するものです。利用者各位におかれましては、本サイトにアクセスしてこれを利用した場合は、このご利用規定に同意したものとみなします。</dd>
+<dd>神姫bizプロデュース株式会社ウェブサイト（以下「本サイト」）のコンテンツは、次に定める条件（以下「ご利用規定」）に従ってご利用いただくことを条件として、神姫bizプロデュース株式会社（以下、「当社」）が提供するものです。利用者各位におかれましては、本サイトにアクセスしてこれを利用した場合は、このご利用規定に同意したものとみなします。</dd>
 
 <dt>免責事項について</dt>
 <dd>当社は、本サイトについてあらゆる面から細心の注意を払っています。しかしながら、当社はこれらの信頼性・安全性について一切を保証するものではなく、また利用者各位が本サイトおよび本サイトの情報を利用することによって生じる、いかなる損害についても責任を負うものではありません。当社は、予告なしに本サイト上の情報を変更あるいは削除、本サイトの運用を中断または中止することがあります。また、当社は理由の如何に関わらず、情報の変更ならびに削除、および本サイトの運用の中断または中止によって生じるいかなる障害についても責任を負うものではありません。あらかじめご了承ください。</dd>
@@ -273,7 +273,7 @@ class="v-name"の様に設定する。
 
 <div class="f_logo_wrap">
 <div class="f_logo">
-<img src="../images/com/logo_w.png" alt="株式会社サンライズグランドフーズ">
+<img src="../images/com/logo_w.png" alt="神姫bizプロデュース株式会社">
 </div> 
 
 <h2 class="en"><span>株式会社</span>サンライズグランドフーズ</h2>
