--- a/thanks.html
+++ b/thanks.html
@@ -20,9 +20,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>お問い合わせ｜神姫bizプロデュース株式会社｜総合フードマーケティング</title>
-<meta name="keywords" content="お問い合わせ,チルドフード,本物,健康,安全,流通,企画提案,付加価値,ストアマネージャ,PB商品,チルド食品,食品卸,卸売り,棚割管理,静岡県,サンライズ,Sunrise Grand Foods,サンライズグランドフーズ"/>
-<meta name="description" content="神姫bizプロデュース株式会社のお問い合わせページ"/>
+<title>お問い合わせ｜神姫bizプロデュース株式会社</title>
+
 <!-- InstanceEndEditable -->
 
 
@@ -70,58 +69,6 @@
 <a href="../index.html"><img src="../images/com/logo.png" alt="神姫bizプロデュース株式会社"></a>
 </div>
 
-<div class="menu_wrap">
-
-<ul class="contact_box en">
-<li class="request_btn">
-<a href="../recruit/">RECRUIT</a>
-</li>
-<li class="contact_btn">
-<a href="../contact/">CONTACT</a> 
-</li>
-</ul>
-
-<ul class="menu_list">
-<li><a href="../company/">企業情報</a></li>
-<li><a href="../oroshi/">総合卸売事業</a></li>
-<li><a href="../hoken/">保険事業</a></li>
-<li><a href="../environment/">環境保全活動</a></li>
-</ul>
-</div>
-
-<div class="menuWrap">
-<a class="menu">
-<span class="menu__line menu__line--top"></span>
-<span class="menu__line menu__line--center"></span>
-<span class="menu__line menu__line--bottom"></span>
-</a>
-</div><!-- .menuWrap -->
-<nav class="gnav">
-<div class="gnav__wrap">
-<div class="gnav_contents">
-<div class="gnav_contents_box">
-<div class="gnav_menu_box">
-
-<div class="gnav_menu_boxL">
-<ul class="gnav__menu">
-<li class="gnav__menu__item"><a href="../company/">企業情報</a></li>
-<li class="gnav__menu__item"><a href="../oroshi/">総合卸売事業</a></li>
-<li class="gnav__menu__item"><a href="../hoken/">保険事業</a></li>
-<li class="gnav__menu__item"><a href="../environment/">環境保全活動</a></li>
-<li class="gnav__menu__item"><a href="../recruit/">採用情報</a></li>
-<li class="gnav__menu__item"><a href="../contact/">お問い合わせ</a></li>
-<li class="gnav__menu__item"><a href="../privacy/">個人情報保護方針</a></li>
-<li class="gnav__menu__item"><a href="../solicitation/">勧誘方針</a></li>
-<li class="gnav__menu__item"><a href="../sitemap.html">サイトマップ</a></li>
-</ul>
-</div><!-- .gnav_menu_boxL -->
-
-</div><!--gnav_menu_box-->
-</div><!--gnav_contents_box-->
-</div><!--gnav_contents-->
-</div><!--gnav-wrap-->
-</nav>
-	
 
 </div><!-----#header----->
 </header>
@@ -168,63 +115,11 @@ TOPに戻る
 <!-- InstanceEndEditable -->
 
 <footer>
-<div id="footer">
 
-<div class="f_logo_wrap">
-<div class="f_logo">
-<img src="../images/com/logo_w.png" alt="神姫bizプロデュース株式会社">
-</div> 
-
-<h2 class="en"><span>株式会社</span>サンライズグランドフーズ</h2>
-<div class="address">
-〒438-0804<br>
-静岡県磐田市加茂146-1<br>
-TEL：0538-36-2511 FAX：0538-36-2201
-</div>
-<div class="insta_icon">
-<a href="https://www.instagram.com/honor.1961/" target="_blank">
-<img src="../images/com/instagram.svg">
-</a>
-</div>
-
-<p class="copy en">
-Copyright © 2024 Sunrise Grand Foods Co., Ltd. All Rights Reserved.
-</p>
-</div>
-
-
-<div class="fot_list_wrap">
-<div class="fot_list_inner">
-<ul class="fot_list2">
-<li><a href="../company/">企業情報</a></li>
-<li><a href="../oroshi/">総合卸売事業</a></li>
-<li><a href="../hoken/">保険事業</a></li>
-<li><a href="../environment/">環境保全活動</a></li>
-<li><a href="../company/">企業情報</a></li>
-<li><a href="../recruit/">採用情報</a></li>
-<li><a href="../contact/">お問い合わせ</a></li>
-<li><a href="../privacy/">個人情報保護方針</a></li>
-<li><a href="../solicitation/">勧誘方針</a></li>
-<li><a href="../sitemap.html">サイトマップ</a></li>
-</ul>
-</div>
-
-
-<div class="sup_bnr"><a href="https://www.jubilo-iwata.co.jp/" target="_blank"><img src="../images/group/jubilo.png"></a></div>
-</div>
-
-
-
-</div>
 </footer>
 
 <!--sp-->
-<div class="sp">
-<ul class="sp_list">
-<li><a href="../contact/"><i class="fas fa-envelope"></i><span class="tit en">CONTACT</span></a></li>
-<li><a href="../recruit/" target="_blank"><i class="fas fa-user-alt"></i><span class="tit en">RECRUIT</span></a></li>
-</ul>
-</div>
+
 
 
 <script src="../js/txt_anim.js"></script>
