--- a/top.html
+++ b/top.html
@@ -20,9 +20,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>お問い合わせ｜神姫bizプロデュース株式会社｜総合フードマーケティング</title>
-<meta name="keywords" content="お問い合わせ,チルドフード,本物,健康,安全,流通,企画提案,付加価値,ストアマネージャ,PB商品,チルド食品,食品卸,卸売り,棚割管理,静岡県,サンライズ,Sunrise Grand Foods,サンライズグランドフーズ"/>
-<meta name="description" content="神姫bizプロデュース株式会社のお問い合わせページ"/>
+<title>お問い合わせ｜</title>
+<meta name="keywords" content="お問い合わせ"/>
+<meta name="description" content="お問い合わせページ"/>
 <!-- InstanceEndEditable -->
 
 
@@ -52,9 +52,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 
 
-<link rel="stylesheet" type="text/css" href="../css/txt_anim.css">
 <!-- InstanceBeginEditable name="head" -->
-<link href="../css/contact.css" rel="stylesheet" type="text/css">
+
 <!-- InstanceEndEditable -->
 </head>
 
@@ -65,61 +64,8 @@
 <header>
 <div id="header">
 
-<div class="logo_wrap">	
-<a href="../index.html"><img src="../images/com/logo.png" alt="神姫bizプロデュース株式会社"></a>
-</div>
 
-<div class="menu_wrap">
 
-<ul class="contact_box en">
-<li class="request_btn">
-<a href="../recruit/">RECRUIT</a>
-</li>
-<li class="contact_btn">
-<a href="../contact/">CONTACT</a> 
-</li>
-</ul>
-
-<ul class="menu_list">
-<li><a href="../company/">企業情報</a></li>
-<li><a href="../oroshi/">総合卸売事業</a></li>
-<li><a href="../hoken/">保険事業</a></li>
-<li><a href="../environment/">環境保全活動</a></li>
-</ul>
-</div>
-
-<div class="menuWrap">
-<a class="menu">
-<span class="menu__line menu__line--top"></span>
-<span class="menu__line menu__line--center"></span>
-<span class="menu__line menu__line--bottom"></span>
-</a>
-</div><!-- .menuWrap -->
-<nav class="gnav">
-<div class="gnav__wrap">
-<div class="gnav_contents">
-<div class="gnav_contents_box">
-<div class="gnav_menu_box">
-
-<div class="gnav_menu_boxL">
-<ul class="gnav__menu">
-<li class="gnav__menu__item"><a href="../company/">企業情報</a></li>
-<li class="gnav__menu__item"><a href="../oroshi/">総合卸売事業</a></li>
-<li class="gnav__menu__item"><a href="../hoken/">保険事業</a></li>
-<li class="gnav__menu__item"><a href="../environment/">環境保全活動</a></li>
-<li class="gnav__menu__item"><a href="../recruit/">採用情報</a></li>
-<li class="gnav__menu__item"><a href="../contact/">お問い合わせ</a></li>
-<li class="gnav__menu__item"><a href="../privacy/">個人情報保護方針</a></li>
-<li class="gnav__menu__item"><a href="../solicitation/">勧誘方針</a></li>
-<li class="gnav__menu__item"><a href="../sitemap.html">サイトマップ</a></li>
-</ul>
-</div><!-- .gnav_menu_boxL -->
-
-</div><!--gnav_menu_box-->
-</div><!--gnav_contents_box-->
-</div><!--gnav_contents-->
-</div><!--gnav-wrap-->
-</nav>
 	
 
 </div><!-----#header----->
@@ -216,7 +162,7 @@ class="v-name"の様に設定する。
 <h3 class="contact-privacy__title">プライバシーポリシー</h3>
 <dl class="contact-privacy__list">
 <dt>ご利用規定</dt>
-<dd>神姫bizプロデュース株式会社ウェブサイト（以下「本サイト」）のコンテンツは、次に定める条件（以下「ご利用規定」）に従ってご利用いただくことを条件として、神姫bizプロデュース株式会社（以下、「当社」）が提供するものです。利用者各位におかれましては、本サイトにアクセスしてこれを利用した場合は、このご利用規定に同意したものとみなします。</dd>
+<dd>（以下「本サイト」）のコンテンツは、次に定める条件（以下「ご利用規定」）に従ってご利用いただくことを条件として、（以下、「当社」）が提供するものです。利用者各位におかれましては、本サイトにアクセスしてこれを利用した場合は、このご利用規定に同意したものとみなします。</dd>
 
 <dt>免責事項について</dt>
 <dd>当社は、本サイトについてあらゆる面から細心の注意を払っています。しかしながら、当社はこれらの信頼性・安全性について一切を保証するものではなく、また利用者各位が本サイトおよび本サイトの情報を利用することによって生じる、いかなる損害についても責任を負うものではありません。当社は、予告なしに本サイト上の情報を変更あるいは削除、本サイトの運用を中断または中止することがあります。また、当社は理由の如何に関わらず、情報の変更ならびに削除、および本サイトの運用の中断または中止によって生じるいかなる障害についても責任を負うものではありません。あらかじめご了承ください。</dd>
@@ -269,69 +215,17 @@ class="v-name"の様に設定する。
 <!-- InstanceEndEditable -->
 
 <footer>
-<div id="footer">
 
-<div class="f_logo_wrap">
-<div class="f_logo">
-<img src="../images/com/logo_w.png" alt="神姫bizプロデュース株式会社">
-</div> 
-
-<h2 class="en"><span>株式会社</span>サンライズグランドフーズ</h2>
-<div class="address">
-〒438-0804<br>
-静岡県磐田市加茂146-1<br>
-TEL：0538-36-2511 FAX：0538-36-2201
-</div>
-<div class="insta_icon">
-<a href="https://www.instagram.com/honor.1961/" target="_blank">
-<img src="../images/com/instagram.svg">
-</a>
-</div>
-
-<p class="copy en">
-Copyright © 2024 Sunrise Grand Foods Co., Ltd. All Rights Reserved.
-</p>
-</div>
-
-
-<div class="fot_list_wrap">
-<div class="fot_list_inner">
-<ul class="fot_list2">
-<li><a href="../company/">企業情報</a></li>
-<li><a href="../oroshi/">総合卸売事業</a></li>
-<li><a href="../hoken/">保険事業</a></li>
-<li><a href="../environment/">環境保全活動</a></li>
-<li><a href="../company/">企業情報</a></li>
-<li><a href="../recruit/">採用情報</a></li>
-<li><a href="../contact/">お問い合わせ</a></li>
-<li><a href="../privacy/">個人情報保護方針</a></li>
-<li><a href="../solicitation/">勧誘方針</a></li>
-<li><a href="../sitemap.html">サイトマップ</a></li>
-</ul>
-</div>
-
-
-<div class="sup_bnr"><a href="https://www.jubilo-iwata.co.jp/" target="_blank"><img src="../images/group/jubilo.png"></a></div>
-</div>
-
-
-
-</div>
 </footer>
 
 <!--sp-->
 <div class="sp">
-<ul class="sp_list">
-<li><a href="../contact/"><i class="fas fa-envelope"></i><span class="tit en">CONTACT</span></a></li>
-<li><a href="../recruit/" target="_blank"><i class="fas fa-user-alt"></i><span class="tit en">RECRUIT</span></a></li>
-</ul>
+
 </div>
 
 
-<script src="../js/txt_anim.js"></script>
-<!-- InstanceBeginEditable name="js" -->
 <script src="js/validate.js"></script>
 <!-- InstanceEndEditable -->
-<script> new WOW().init(); </script>
+
 </body>
 <!-- InstanceEnd --></html>
