--- a/confirm.html
+++ b/confirm.html
@@ -1,27 +1,260 @@
-<html lang="ja">
+<!doctype html>
+<html lang="ja"><!-- InstanceBegin template="/Templates/temp.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta charset="UTF-8">
-<title>お問い合わせフォーム</title>
-<link rel="stylesheet" href="style.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JJ5FZXELFW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JJ5FZXELFW');
+</script>
+
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>お問い合わせ｜ビルドH制作・溶接形鋼の専門企業｜株式会社桂スチール</title>
+<meta name="description" content="お問い合わせのページです。株式会社桂スチールは兵庫・姫路を拠点に、ビルドHの製作や溶接形鋼などの鋼構造物加工を手がける専門企業です。確かな技術と高品質で、建築・土木分野を支えています。">
+<meta name="keywords" content="お問い合わせ,ビルドH,溶接形鋼,鋼構造物,姫路,桂スチール,鉄骨加工,建築鋼材">
+<!-- InstanceEndEditable -->
+<meta name="format-detection" content="telephone=no, email=no, address=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<link rel="shortcut icon" href="../favicon.ico" type="image/vnd.microsoft.icon" />
+<link rel="icon" href="../favicon.ico" type="image/vnd.microsoft.icon" />
+<link rel="shortcut icon" href="../favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="icon" href="../favicon.ico" type="image/vnd.microsoft.icon">
+<meta name="thumbnail" content="../images/com/thumbnail.jpg" />
+
+<!--css-->	
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+<link href="../css/boilerplate.css" rel="stylesheet" type="text/css">
+<link href="../css/style.css" rel="stylesheet" type="text/css">
+<link href="../css/animate.css" rel="stylesheet" type="text/css">
+<link href="../css/menu.css" rel="stylesheet" type="text/css">
+<link href="../css/line_anim.css" rel="stylesheet" type="text/css">
+
+<!--js-->
+<script src="../js/jquery-3.7.1.min.js"></script>
+<script src="../js/jquery.easing.min.js"></script>
+<script src="../js/anime.min.js"></script>
+<script src="../js/wow.min.js"></script>
+<script src="../js/menu.js"></script>
+
+<!--font-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" type="text/css" href="../css/txt_anim.css">
+<!-- InstanceBeginEditable name="head" -->
+<link href="../css/contact.css" rel="stylesheet" type="text/css">
+<!-- InstanceEndEditable -->
 </head>
-<body>
-<div><h1>Company Name</h1></div>
-<div><h2>お問い合わせ</h2></div>
-<div>
-    <form action="send.php" method="post">
-            
-            <h1 class="contact-title">お問い合わせ 内容確認</h1>
-            <p>お問い合わせ内容はこちらで宜しいでしょうか？<br>よろしければ「送信する」ボタンを押して下さい。</p>
-            <div id="confirms"> <!-- id="confirms"が必要 -->
-                <div>
-                    <label>お名前</label>
-                    <p>お名前</p>
-                </div>
-                
-            </div>
-        <input type="button" value="内容を修正する" onclick="history.back(-1)">
-        <button type="submit" name="submit">送信する</button>
-    </form>
+
+
+<body id="pagetop" >
+<!-- InstanceBeginEditable name="body" -->
+
+<!-- InstanceEndEditable -->
+<header>
+<div id="header" class="js-scroll-x">
+
+<div class="logo_wrap">	
+<a href="../index.html">
+<img src="../images/com/logo.svg" alt="株式会社桂スチール">
+</a>
 </div>
+
+<nav class="gnav">
+<div class="menu-container">
+<div class="menu">
+<ul class="en">
+<li><a href="../thoughts/"><span class="en">THOUGHTS</span>私たちの想い</a></li>
+<li><a href="../strengths/"><span class="en">STRENGTHS</span>私たちの強み</a></li>
+<li><a href="../products_solutions/"><span class="en">PRODUCTS&amp;SOLUTIONS</span>製品・ソリューション技術</a></li>
+<li><a href="../flow/"><span class="en">FLOW</span>納品までの流れ</a></li>
+<li><a href="../facilities/"><span class="en">PRODUCTION FACILITIES</span>生産設備・工場</a></li>
+<li><a href="../works/"><span class="en">WORKS</span>納入実績</a></li>
+<li><a href="../company/"><span class="en">COMPANY</span>企業情報</a></li>
+<li><a href="../recruit/" target="_blank"><span class="en">RECRUIT</span>採用情報</a></li>
+<li class="btn"><a href="index.php"><span class="en">CONTACT</span>お問い合わせ</a></li>
+</ul>
+</div>
+</div>
+</nav>
+
+
+
+<div class="sp">
+<div class="drawer_menu">
+<div class="drawer_bg"></div>
+<button type="button" class="drawer_button">
+<span class="drawer_bar drawer_bar1"></span>
+<span class="drawer_bar drawer_bar2"></span>
+<span class="drawer_bar drawer_bar3"></span>
+<span class="drawer_menu_text drawer_text">MENU</span>
+<span class="drawer_close drawer_text">CLOSE</span>
+</button>
+<nav class="drawer_nav_wrapper">
+<ul class="drawer_nav en">
+<li><a href="../thoughts/"><span class="en">THOUGHTS</span>私たちの想い</a></li>
+<li><a href="../strengths/"><span class="en">STRENGTHS</span>私たちの強み</a></li>
+<li><a href="../products_solutions/"><span class="en">PRODUCTS&amp;SOLUTIONS</span>製品・ソリューション技術</a></li>
+<li><a href="../flow/"><span class="en">FLOW</span>納品までの流れ</a></li>
+<li><a href="../facilities/"><span class="en">PRODUCTION FACILITIES</span>生産設備・工場</a></li>
+<li><a href="../works/"><span class="en">WORKS</span>納入実績</a></li>
+<li><a href="../company/"><span class="en">COMPANY</span>企業情報</a></li>
+<li><a href="../recruit/" target="_blank"><span class="en">RECRUIT</span>採用情報</a></li>
+<li><a href="index.php"><span class="en">CONTACT</span>お問い合わせ</a></li>
+<li><a href="../privacy/"><span class="en">PRIVACY POLICY</span>プライバシーポリシー</a></li>
+<li><a href="../sitemap.html"><span class="en">SITEMAP</span>サイトマップ</a></li>
+</ul>
+
+</nav>
+</div>
+</div><!-- sp -->
+
+</div><!-----#header----->
+</header>
+<div id="totop"><a href="#pagetop" class="totop" style="display: block;"></a></div>
+
+<!-- InstanceBeginEditable name="hed" -->
+<section class="hed_wrap">
+<div class="com_ttl_wrap">
+<h1 class="ttl_ja">お問い合わせ</h1>
+<h2 class="ttl_en">
+<div class="text_04">
+<span class="text-wrapper">
+<span class="letters">Contact</span>
+</span>
+</div>
+</h2></div>
+</section>
+
+<section class="hed_com_img_wrap">
+<ul class="breadcrumb">
+<li><a href="../index.html">トップ</a></li>
+<li>お問い合わせ</li>
+</ul>
+<div class="mv_img img_mask"><img src="../images/contact/mv_img.jpg"></div>
+</section>
+<!-- InstanceEndEditable -->
+
+<!-- InstanceBeginEditable name="contents" -->
+<section id="contact">
+<div class="section_wrap">
+
+
+<h4 class="s_ttl">確認画面</h4>
+
+
+<p class="contact_txt">
+入力内容はこちらで宜しいでしょうか？<br>
+よろしければ「送信」ボタンを押して下さい。 
+</p>
+
+
+<form action="send.php" method="post">
+<table id="confirms" class="com_table mB30"> <!-- id="confirms"が必要 -->
+</table>
+
+<div align="center">
+<p class="mB30" style="margin-bottom:30px"><button type="submit" name="submit" class="btn btn-primary">送信</button></p>
+<p>
+<input type="button" value="戻る" onclick="location.href='index.php'" class="btn_back">
+</p>
+</div>
+</form>
+
+</div>
+</section>
+<!-- InstanceEndEditable -->
+
+<footer>
+<div id="footer">
+
+<div class="f_logo_wrap">
+<div class="f_logo">
+<img src="../images/com/logo2.svg" alt="株式会社桂スチール">
+</div> 
+
+</div>
+
+<div class="ft_btm">
+<div class="ft_info">
+<dl>
+<dt>
+TEL.0869-62-2312 
+</dt>
+<dt>
+FAX.0869-62-2313
+</dt>
+</dl>
+
+</div>
+<nav class="ft_navi">
+<ul>
+<li><a href="../thoughts/">私たちの想い</a></li>
+<li><a href="../strengths/">私たちの強み</a></li>
+<li><a href="../products_solutions/">製品・ソリューション技術</a></li>
+<li><a href="../flow/">納品までの流れ</a></li>
+<li><a href="../facilities/">生産設備・工場</a></li>
+<li><a href="../works/">納入実績</a></li>
+<li><a href="../company/">企業情報</a></li>
+<li><a href="../recruit/" target="_blank">採用情報</a></li>
+<li><a href="index.php">お問い合わせ</a></li>
+<li><a href="../privacy/">プライバシーポリシー</a></li>
+<li><a href="../sitemap.html">サイトマップ</a></li>
+</ul>
+</nav>
+</div>
+
+
+<p class="copy en">
+Copyright© KATSURA STEEL All Rights Reserved.  
+</p>
+
+</div>
+</footer>
+
+
+<!--sp-->
+<div class="sp">
+<ul class="sp_list">
+<li><a href="index.php"><i class="fas fa-envelope"></i><span class="tit en">Contact</span></a></li>
+<li><a href="../recruit/" target="_blank"><i class="fas fa-user-alt"></i><span class="tit en">Recruit</span></a></li>
+</ul>
+</div>
+
+
+<script src="../js/com.js"></script>
+
+<link href="../css/megamenu.css" rel="stylesheet" type="text/css">
+<script src="../js/megamenu.js"></script>
+<link rel="stylesheet" href="../css/scroll-hint.css">
+<script src="../js/scroll-hint.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+<link href="../css/txt_anim.css" rel="stylesheet" type="text/css">
+<script src="../js/txt_anim.js"></script>
+
+<!-- InstanceBeginEditable name="js" -->
+<script src="js/validate.js"></script>
+<!-- InstanceEndEditable -->
+
+
+
+<script> new WOW().init(); </script>
+<script>
+$(window).on('load ', function() {
+$('.hed_com_img_wrap .img_mask').addClass('is-active')
+})
+
+
+
+</script>
 </body>
-</html>
+<!-- InstanceEnd --></html>
